--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-mic": "^12.4.6",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
