--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-audio-player": "^0.17.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.4",
     "react-media-recorder": "^1.6.6",
     "react-mic": "^12.4.6",
     "react-player": "^2.14.1",
