--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-cropper": "^2.3.3",
